0.7.0 [in progress]
Added planet trails - hit "4" or "," once for ecliptic, again for trails (advance time to observe)
Added precession of the equinoxes
More realistic and efficient meteor showers
Added and set-up gettext facilities.
Added rudimentary scripting features
Added lunar eclipse simulation
Added a fader class, lines and objects fade in/out easily now.
Added MacosX Xcode project file from Da-Woon Joung.
Added patches from Fumio Yamamoto for various fixes.
Removed all the libpng/zlib .c files from the glgpng directory, use host system libpng instead.

0.6.2 [2004-11-18]
Fixed time display bug (1 hour ahead of actual sky time during standard time if your timezone has daylight savings).  
NOTE: Time is only displayed as standard time (no daylight savings effects).
Fixed Milky Way drawing incorrectly (inside out) in desktop mode.
Fixed Milky Way always on regardless of config setting.
Fixed atmosphere flashing bug (for the final time, we hope).

0.6.1 [2004-10-17]
Added time control buttons on bottom right part of the screen.
Fixed the flashy background bug when zooming out too much in fisheye mode.
Fixed landscape gap bug in textures on some 3D card on windows.
Added all the impressive constellation art images by Johan Meuris.
Applied patches from Fumio Yamamoto for MacOSX portability.
Recoded landscape ground displaying.
Added a nice landscape from a panorama made in my own village!
Rudimentary sky localization (no accented characters) for English, Spanish, French, and some Hawaiian sky labels (needs UI)
Improved constellation art fade in/out (still need more art) and added atmosphere fade in/out
Added planet orbits feature
Added concept of sky cultures for different constellations (currently western and polynesian, needs UI)
Added meteor showers (key 9)
Added deep space object image credits
Added manual (really semi-auto) zoom option (centers for you when you start zooming, zooms in increments with key presses)
Brightened star labels for readability
	